--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -238,7 +238,8 @@ html, body {
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: 0 0 0.5rem 0.01rem var(--accent);
+    border: 1px solid var(--accent);
+    /* box-shadow: 0 0 0.5rem 0.01rem var(--accent); */
 }
 
 .board input::placeholder{
