--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -6,6 +6,7 @@
     --accent: #EBB441;
     --header-height: 50px;
     --sidebar-width: 160px;
+    --element-space: 0.75rem;
 }
 
 @font-face {
@@ -36,12 +37,12 @@ html, body {
 
 .header{
     margin: 0;
-    padding: 0rem 1.5rem;
-    width: calc(100% - 5rem);
+    padding: 0;
+    width: calc(100% - var(--element-space)*2 );
     height: var(--header-height);
     position: fixed;
-    top: 0.5rem;
-    left: 1rem;
+    top: var(--element-space);
+    left: var(--element-space);
     /* right: 0; */
     display: flex;
     justify-content: space-between;
@@ -54,6 +55,7 @@ html, body {
 .header h1{
     font-size: large;
     font-family: "cascadia";
+    margin-left: 1.5rem;
 }
 
 .header button{
@@ -100,6 +102,7 @@ html, body {
     width: calc(var(--header-height)*0.6);
     height: calc(var(--header-height)*0.6);
     margin-left: 1rem;
+    margin-right: 1rem;
     aspect-ratio: 1/1;
     border-radius: 50%;
 }
@@ -112,10 +115,10 @@ html, body {
     justify-content: space-between;
     align-items: center;
     justify-items: center;
-    bottom: 1rem;
-    left: 1rem;
+    bottom: var(--element-space);
+    left: var(--element-space);
     width: var(--sidebar-width);
-    height: calc(100% - var(--header-height) - 2rem);
+    height: calc(100% - var(--header-height) - var(--element-space)*3);
     box-sizing: border-box;
     overflow: auto;
     background-color: var(--bg-primary);
@@ -189,10 +192,10 @@ html, body {
 
 .board{
     position: absolute;
-    bottom: 1rem;
-    right: 1rem;
-    width: calc(100% - var(--sidebar-width) - 2.5rem);
-    height: calc(100% - var(--header-height) - 2rem);
+    bottom: var(--element-space);
+    right: var(--element-space);
+    width: calc(100% - var(--sidebar-width) - var(--element-space)*3);
+    height: calc(100% - var(--header-height) - var(--element-space)*3);
     border: 1px solid var(--bg-primary);
     border-radius: 1rem;
     box-shadow: 0 0 1rem 0.1rem rgba(0, 0, 0, 0.05);
