--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -70,7 +70,7 @@ html, body {
     display: flex;
 }
 
-#rinji-button{
+#connect-button{
     margin-left: 1rem;
 }
 
@@ -207,9 +207,9 @@ html, body {
 }
 @media screen and (max-width: 760px) {
     .board {
-      left: 1rem;
+      left: var(--element-space);
       width: auto;
-      bottom: 1rem;
+      bottom: var(--element-space);
     }
   }
 
@@ -227,7 +227,7 @@ html, body {
   }
   
   #container {
-    overflow: hidden;
+    /* overflow: hidden; */
     width: 100%;
     height: 100%;
   }
