--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -227,9 +227,9 @@ html, body {
   }
   
   #container {
-    /* overflow: hidden;
-    width: 100%;
-    height: 100%; */
+    /* overflow: hidden;*/
+    width: 5000px;
+    height:5000px; 
   }
   #container__wrapper::-webkit-scrollbar {
     display: none;
