--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -228,6 +228,7 @@ html, body {
   
   #container {
     /* overflow: hidden;*/
+    /* background: var(--accent); */
     width: 5000px;
     height:5000px; 
   }
