containerを画面中央に
zoom時の動作を改善するため

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -222,6 +222,8 @@ html, body {
     /* overflow: hidden;*/
     width: 5000px;
     height:5000px; 
+    transform: translate(-50%,-50%);
+    transform-origin:center center;
   }
   #container__wrapper::-webkit-scrollbar {
     display: none;
