--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,7 +1,7 @@
 *{
     --font-primary: #252525;
     --font-secondary: #aaaaaa;
-    --bg-primary: #ffffff;
+    --bg-primary: rgba(255,255,255,0.5);
     --bg-secondary: #f5f5f5;
     --accent: #EBB441;
     --header-height: 50px;
@@ -381,17 +381,17 @@ button i{
 .card {
     width: fit-content;
     height: auto;
-    min-width: 100px;
+    /*min-width: 100px;*/
     min-height: 50px;
     max-width: 300px;
-    padding: 0.5rem 1rem;
+    padding: 0.2rem 0.5rem;
     background-color: var(--bg-primary);
     color: var(--font-primary);
     border: 1px solid black;
     display: flex;
     justify-content: left;
     align-items: center;
-    font-size: 1rem;
+    font-size: 1.5rem;
     position: absolute;
     cursor: pointer;
     /* z-index: 100; */
