--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -222,6 +222,7 @@ html, body {
     /* overflow: hidden;*/
     width: 5000px;
     height:5000px; 
+    position: relative;
     transform: translate(-50%,-50%);
     transform-origin:center center;
   }
