--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -388,7 +388,7 @@ button i{
     padding: 0.2rem 0.5rem;
     background-color: var(--bg-primary);
     color: var(--font-primary);
-    border: 1px solid black;
+    /*border: 1px solid black;*/
     display: flex;
     justify-content: left;
     align-items: center;
