--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -222,9 +222,11 @@ html, body {
     /* overflow: hidden;*/
     width: 5000px;
     height:5000px; 
-    position: relative;
     transform: translate(-50%,-50%);
+    top:50%;
+    left: 50%;
     transform-origin:center center;
+    position: absolute;
   }
   #container__wrapper::-webkit-scrollbar {
     display: none;
