--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -205,7 +205,6 @@ body {
 }
 
 #container__wrapper {
-  overflow: hidden;
   position: relative;
   width: 100%;
   height: 100%;
@@ -392,6 +391,8 @@ button i {
   border-radius: 1rem;
   box-shadow: 0 0 1rem 0.1rem rgba(0, 0, 0, 0.05);
   line-height: 1.2;
+  display: flex;
+  flex-wrap: wrap;
 }
 .card span {
   white-space: nowrap;
