--- a/styles/globals.css
+++ b/styles/globals.css
@@ -289,7 +289,6 @@ body {
 }
 
 #tap-anywhere {
-  visibility: hidden;
   font-size: smaller;
   font-weight: lighter;
   cursor: default;
@@ -510,4 +509,36 @@ canvas {
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+/*Generative Art*/
+.generativeart {
+  position: relative;
+  z-index: 100;
+}
+canvas {
+  display: block;
+}
+
+.back-button {
+  position: fixed;
+  width: 100%;
+  bottom: 5%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: #ffffff;
+  font-family: Arial, Helvetica, sans-serif;
+  text-shadow: 0 0 20px #000000;
+}
+
+#BacktoHome {
+  font-size: large;
+  text-decoration: none;
+  color: #fff;
+}
+
+#BacktoHome:hover {
+  color: #00ff11;
+  text-shadow: 0 0 5px #00ff1180;
 }
