--- a/styles/globals.css
+++ b/styles/globals.css
@@ -513,8 +513,13 @@ canvas {
 
 /*Generative Art*/
 .generativeart {
-  position: relative;
-  z-index: 100;
+  position: absolute;
+  z-index: 1000;
+  background-color: #fff;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
 }
 canvas {
   display: block;
@@ -535,7 +540,7 @@ canvas {
 #BacktoHome {
   font-size: large;
   text-decoration: none;
-  color: #fff;
+  color: #d2d2d2;
 }
 
 #BacktoHome:hover {
