--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,14 +3,15 @@
 @tailwind utilities;
 
 * {
-  --font-primary: #252525;
-  --font-secondary: #aaaaaa;
-  --bg-primary: rgba(255, 255, 255, 0.5);
-  --bg-secondary: #f5f5f5;
+  --black: #252525;
+  --gray: #aaaaaa;
+  --bg-primary: #EFEFEF;
+  --bg-primary: #f5f5f5;
+  --cream:#F9F6EC;
   --accent: #ebb441;
   --header-height: 50px;
-  --sidebar-width: 160px;
   --element-space: 0.75rem;
+  --room-header-height: 40px;
 }
 
 @font-face {
@@ -23,82 +24,78 @@
   src: url(/NotoColorEmoji-Regular.ttf);
 }
 
-html,
-body {
-  font-family: sans-serif;
-  margin: 0;
-  padding: 0;
-  background: var(--bg-secondary);
+@font-face {
+  font-family: "NuKinakoMochi";
+  src: url(/NuKinakoMochi-Reg.otf);
 }
 
-/* .emoji-span {
-    font-family: "noto-emoji", sans-serif;
-} */
+html,
+body {
+  font-family: "NuKinakoMochi", sans-serif;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(0deg, transparent 19px, rgba(235, 180, 65, 0.25) 20px), linear-gradient(90deg, transparent 19px, rgba(235, 180, 65, 0.25) 20px);
+  background-color: var(--bg-primary);
+  background-size: 20px 20px;
+}
 
 .emoji-span {
   font-family: "Apple Color Emoji", "Noto Color Emoji", sans-serif;
 }
 
+.pixel-shadow{
+  box-shadow: inset -0.15rem -0.15rem 0 0 rgba(0, 0, 0, 0.25), inset -0.075rem -0.075rem 0 0 rgba(0, 0, 0, 0.25), inset 0.15rem 0.15rem 0 0 rgba(255, 255, 255, 0.5),inset 0.075rem 0.075rem 0 0 rgba(255, 255, 255, 0.5);
+}
+
+.pixel-shadow-inverse{
+  box-shadow: inset -0.15rem -0.15rem 0 0 rgba(255, 255, 255, 0.5), inset -0.075rem -0.075rem 0 0 rgba(255, 255, 255, 0.5), inset 0.15rem 0.15rem 0 0 rgba(0, 0, 0, 0.25), inset 0.075rem 0.075rem 0 0 rgba(0, 0, 0, 0.25);
+}
+
 .header {
   margin: 0;
   padding: 0;
-  width: calc(100% - var(--element-space) * 2);
+  width: 100%;
   height: var(--header-height);
   position: fixed;
-  top: var(--element-space);
-  left: var(--element-space);
-  /* right: 0; */
+  top:0;
+  left: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: var(--bg-primary);
-  border-bottom: 1px solid var(--bg-secondary);
-  border-radius: 0.75rem;
+  color: var(--cream);
+  background: var(--accent);
+  border-bottom: 3px solid var(--black);
+  z-index: 999;
+  cursor: default;
 }
 
 .header h1 {
-  font-size: large;
-  font-family: "cascadia";
+  font-size: normal;
   margin-left: 1.5rem;
 }
 
-.header button {
-  font-size: smaller;
-  margin: 0;
-  padding: 0.5rem 1rem;
-  border-radius: 0.5rem;
-  color: white;
-  background-color: var(--accent);
-  border: none;
-  cursor: pointer;
-  display: flex;
-}
-
-#connect-button {
-  margin-left: 1rem;
-}
-
-.header button i {
-  margin-right: 0.25rem;
-  font-size: smaller;
-  margin-top: 0.1rem;
-}
-
-.header button:hover {
-  opacity: 0.8;
-}
-
-.header p {
-  margin: 0;
-  padding: 0;
-}
-
 .user {
-  /* 中身を横並びにする */
+  font-size: x-small;
   display: flex;
   flex-wrap: nowrap;
   flex-direction: row;
   align-items: center;
+  justify-content: center;
+  margin-right: 1.5rem;
+}
+
+.user button {
+  margin: 0;
+  color: white;
+  border: none;
+  cursor: pointer;
+  display: flex;
+}
+.user button:hover {
+  opacity: 0.8;
 }
 
 .user-icon {
@@ -108,39 +105,11 @@ body {
   margin-right: 1rem;
   aspect-ratio: 1/1;
   border-radius: 50%;
-}
-
-.sidebar {
-  padding: 0.5rem 0.5rem;
-  position: fixed;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  justify-items: center;
-  bottom: var(--element-space);
-  left: var(--element-space);
-  width: var(--sidebar-width);
-  height: calc(100% - var(--header-height) - var(--element-space) * 3);
-  box-sizing: border-box;
-  overflow: auto;
-  background-color: var(--bg-primary);
-  border-right: 1px solid var(--bg-secondary);
-  border-radius: 1rem;
   display: none;
 }
 
-.sidebar h1 {
-  color: var(--font-secondary);
-  font-size: medium;
-  margin: 0.5rem 1rem;
-  padding: 0;
-  justify-content: center;
-  align-items: center;
-}
-
 .room {
-  color: var(--font-secondary);
+  color: var(--gray);
   font-size: small;
   list-style: none;
   margin: 0.25rem;
@@ -160,32 +129,7 @@ body {
 
 .here {
   color: var(--accent);
-  background-color: var(--bg-secondary);
-}
-
-.createRoom {
-  /* buttonを機能させない */
-  pointer-events: none;
-  font-weight: normal;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: smaller;
-  margin: 0.5rem 0;
-  padding: 0 1rem;
-  border-radius: 0.5rem;
-  color: white;
-  background: var(--accent);
-  border: none;
-  cursor: pointer;
-}
-
-.createRoom:hover {
-  opacity: 0.8;
-}
-
-.createRoom i {
-  margin-right: 0.5rem;
+  background-color: var(--bg-primary);
 }
 
 .icon {
@@ -193,21 +137,6 @@ body {
   margin: 0 0.5rem;
   padding: 0;
 }
-
-.board {
-  position: absolute;
-  left: var(--element-space);
-  width: auto;
-  bottom: var(--element-space);
-  right: var(--element-space);
-  /*width: calc(100% - var(--sidebar-width) - var(--element-space)*3);*/
-  height: calc(100% - var(--header-height) - var(--element-space) * 3);
-  border: 1px solid var(--bg-primary);
-  border-radius: 1rem;
-  box-shadow: 0 0 1rem 0.1rem rgba(0, 0, 0, 0.05);
-  overflow: hidden;
-}
-
 #container__wrapper {
   position: relative;
   width: 100%;
@@ -230,62 +159,132 @@ body {
 #container__wrapper::-webkit-scrollbar {
   display: none;
 }
+
 #manipulate {
   position: fixed;
-  right: 2rem;
-  bottom: 6rem;
+  right: 1rem;
+  bottom: 4rem;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
   z-index: 10;
 }
+
 #manipulate button {
-  width: 40px;
-  height: 40px;
-  background-color: var(--bg-secondary);
-  color: var(--accent);
+  width: 35px;
+  height: 35px;
+  background-color: var(--accent);
+  border: 2px solid var(--black);
+  color: var(--cream);
   font-size: medium;
-  box-shadow: 0 0 0.2rem 0.1rem rgba(235, 180, 65, 0.2);
-}
-
-.board h1 {
-  position: absolute;
-  /* boardの左上に配置 */
-  top: 0.5rem;
-  left: 0.5rem;
-  font-size: medium;
-  color: var(--font-secondary);
-  font-weight: bold;
-  margin-left: 1rem;
-  margin-top: 1rem;
-  cursor: default;
-  width: fit-content;
-  z-index: 100;
-}
-
-.board p {
-  z-index: 10;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: larger;
-  font-weight: bold;
-  color: var(--font-secondary);
-}
-
-.post-set {
-  position: absolute;
-  display: flex;
-  flex-direction: column;
+  border-radius: 2rem;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
+}
 
-  bottom: 1.5rem;
-  left: 50%;
-  transform: translateX(-50%);
+.board {
+  position: relative;
+  top: 50dvh;
+  left: 50dvw;
+  transform: translate(-50%, -50%);
+  width: 300px;
+  height: 300px;
+  min-width: 300px;
+  min-height: 300px;
+  background: var(--cream);
+  overflow: hidden;
+  border-radius: 1rem;
+  border: 2px solid var(--black);
+  box-shadow: 0.5rem 0.5rem 0 0 var(--accent);
+}
+
+.board-header {
+  position: absolute;
+  font-size: 0.75rem;
+  cursor: default;
+  width: 100%;
+  height: var(--room-header-height);
+  margin: 0;
+  padding: 0.5rem 1rem;
+  background: var(--accent);
+  color: var(--cream);
+  border-bottom: 3px solid var(--black);
   z-index: 100;
-  width: calc(100% - 4rem);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 1rem 1rem 0 0;
+}
+
+.board-header-set{
+  display: flex;
+  align-items: flex-end;
+  gap: 1rem;
+}
+
+.board-header-set button{
+  font-size: xx-small;
+}
+
+.handle{
+  cursor: move;
+}
+
+.board-description {
+  position: absolute;
+  font-size: small;
+  background: var(--cream);
+  color: var(--black);
+  width: 100%;
+  height: calc(100% - var(--room-header-height));
+  bottom: 0;
+  left: 0;
+  margin: 0;
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  justify-content: space-between;
+  z-index: 9999;
+}
+
+.desc-jp-en{
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
+}
+
+.board-description button{
+  font-size: small;
+  width: fit-content;
+  background: var(--accent);
+  color: var(--cream);
+  border: 2px solid var(--black);
+  border-radius: 0.5rem;
+  padding: 0.25rem 0.5rem;
+  cursor: pointer;
+}
+
+button:active{
+  box-shadow: inset -0.15rem -0.15rem 0 0 rgba(255, 255, 255, 0.5), inset -0.075rem -0.075rem 0 0 rgba(255, 255, 255, 0.5), inset 0.15rem 0.15rem 0 0 rgba(0, 0, 0, 0.25), inset 0.075rem 0.075rem 0 0 rgba(0, 0, 0, 0.25);
+}
+
+#create-room{
+  font-size: small;
+  position: absolute;
+  bottom: 1rem;
+  left: 1rem;
+  padding: 0.25rem 1rem;
+  width: fit-content;
+  background-color: var(--accent);
+  border: 2px solid var(--black);
+  color: var(--cream);
+  border-radius: 2rem;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  z-index: 999;
 }
 
 #tap-anywhere {
@@ -297,66 +296,51 @@ body {
 }
 
 #tap-anywhere p {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: fit-content;
   margin: 0;
   padding: 0;
-  color: var(--font-primary);
+  color: var(--black);
   opacity: 0.5;
+  z-index: 10;
+  font-size: larger;
+  font-weight: bold;
 }
 
-.board input {
-  position: relative;
-  font-size: medium;
-  color: var(--font-primary);
-  background: var(--bg-secondary);
-  opacity: 0.9;
-  font-size: smaller;
-  padding: 0.5rem 1rem;
+.post-set {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  bottom: var(--element-space);
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 100;
+  width: calc(100% - var(--element-space) * 2);
+}
+
+.post-set input {
+  color: var(--black);
+  background: var(--cream);
+  font-size: 0.75rem;
+  width: 100%;
+  padding: 0.5rem 1rem 0.25rem 1rem;
   cursor: pointer;
   width: 100%;
-  z-index: 999;
-  border-radius: 0.5rem;
-  border: none;
+  /* z-index: 999; */
+  border-radius: 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid var(--accent);
+  border: 2px solid var(--accent);
 }
 
-.board input::placeholder {
-  color: var(--font-secondary);
-}
-
-.board button {
-  position: relative;
-  width: fit-content;
-  height: fit-content;
-  font-size: medium;
-  color: white;
-  background: var(--accent);
-  font-size: smaller;
-  padding: 0.5rem 1rem;
-  cursor: pointer;
-  z-index: 100;
-  border: none;
-  border-radius: 2rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  opacity: 1;
-  touch-action: manipulation;
-}
-
-.board button:active {
-  opacity: 0.5;
-}
-
-.active {
-  opacity: 1;
-}
-
-button i {
-  margin-right: 0.5rem;
+.post-set input::placeholder {
+  color: var(--accent);
 }
 
 #follower {
@@ -368,7 +352,7 @@ button i {
   max-width: 300px;
   padding: 0.5rem 1rem;
   background-color: var(--bg-primary);
-  color: var(--font-primary);
+  color: var(--black);
   display: flex;
   justify-content: left;
   align-items: center;
@@ -387,12 +371,11 @@ button i {
   word-break: break-all;
   padding: 0.5rem;
   background-color: var(--bg-primary);
-  color: var(--font-primary);
+  color: var(--black);
   font-size: 1.5rem;
   position: absolute;
   cursor: pointer;
   border-radius: 1rem;
-  box-shadow: 0 0 1rem 0.1rem rgba(0, 0, 0, 0.05);
   line-height: 1.2;
   display: flex;
   flex-wrap: wrap;
@@ -406,110 +389,13 @@ button i {
   font-family: sans-serif;
   width: 100%;
   background-color: var(--bg-primary);
-  color: var(--font-primary);
+  color: var(--black);
   border: none;
   resize: none;
   font-size: normal;
   outline: none;
 }
 
-dialog {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 500px;
-  background-color: var(--bg-primary);
-  border-radius: 1rem;
-  border: none;
-  z-index: 100;
-  box-shadow: 0 0 0.5rem 0rem var(--font-secondary);
-  margin: 0;
-  padding: 2rem;
-}
-
-#dialog-bg {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 99;
-  display: none;
-}
-
-dialog h1 {
-  margin: 0;
-  margin-bottom: 1rem;
-  padding: 0;
-  font-size: medium;
-  color: var(--accent);
-}
-
-dialog input {
-  margin: 0.5rem 0;
-  margin-bottom: 0rem;
-  padding: 0.5rem 1rem;
-  border-radius: 0.5rem;
-  border: 1px solid var(--font-secondary);
-  font-weight: lighter;
-}
-
-dialog input::placeholder {
-  opacity: 0.5;
-}
-
-dialog label {
-  margin: 0;
-  margin-top: 1rem;
-  padding: 0;
-  font-size: smaller;
-  color: var(--font-secondary);
-  font-weight: bold;
-}
-
-dialog button {
-  margin: 0;
-  padding: 0.5rem 1rem;
-  border-radius: 0.5rem;
-  border: none;
-  cursor: pointer;
-  color: white;
-  background-color: var(--accent);
-}
-
-dialog button:hover {
-  opacity: 0.8;
-}
-
-#closeDialog {
-  background: none;
-  color: var(--font-secondary);
-}
-
-.dialog-button {
-  margin: 0;
-  margin-top: 2rem;
-  padding: 0;
-  border-radius: 0.5rem;
-  margin-left: auto;
-  border: none;
-  cursor: pointer;
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-}
-
-canvas {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
 
 /*Generative Art*/
 .generativeart {
