--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,9 +5,9 @@
 * {
   --black: #252525;
   --gray: #aaaaaa;
-  --bg-primary: #EFEFEF;
+  --bg-primary: #efefef;
   --bg-primary: #f5f5f5;
-  --cream:#F9F6EC;
+  --cream: #f9f6ec;
   --accent: #ebb441;
   --header-height: 50px;
   --element-space: 0.75rem;
@@ -46,11 +46,11 @@ body {
   font-family: "Apple Color Emoji", "Noto Color Emoji", sans-serif;
 }
 
-.pixel-shadow{
-  box-shadow: inset -0.15rem -0.15rem 0 0 rgba(0, 0, 0, 0.25), inset -0.075rem -0.075rem 0 0 rgba(0, 0, 0, 0.25), inset 0.15rem 0.15rem 0 0 rgba(255, 255, 255, 0.5),inset 0.075rem 0.075rem 0 0 rgba(255, 255, 255, 0.5);
+.pixel-shadow {
+  box-shadow: inset -0.15rem -0.15rem 0 0 rgba(0, 0, 0, 0.25), inset -0.075rem -0.075rem 0 0 rgba(0, 0, 0, 0.25), inset 0.15rem 0.15rem 0 0 rgba(255, 255, 255, 0.5), inset 0.075rem 0.075rem 0 0 rgba(255, 255, 255, 0.5);
 }
 
-.pixel-shadow-inverse{
+.pixel-shadow-inverse {
   box-shadow: inset -0.15rem -0.15rem 0 0 rgba(255, 255, 255, 0.5), inset -0.075rem -0.075rem 0 0 rgba(255, 255, 255, 0.5), inset 0.15rem 0.15rem 0 0 rgba(0, 0, 0, 0.25), inset 0.075rem 0.075rem 0 0 rgba(0, 0, 0, 0.25);
 }
 
@@ -60,7 +60,7 @@ body {
   width: 100%;
   height: var(--header-height);
   position: fixed;
-  top:0;
+  top: 0;
   left: 0;
   display: flex;
   justify-content: space-between;
@@ -185,7 +185,9 @@ body {
 
 .board {
   position: relative;
+  top: 50vh;
   top: 50dvh;
+  left: 50vw;
   left: 50dvw;
   transform: translate(-50%, -50%);
   width: 300px;
@@ -217,17 +219,17 @@ body {
   border-radius: 1rem 1rem 0 0;
 }
 
-.board-header-set{
+.board-header-set {
   display: flex;
   align-items: flex-end;
   gap: 1rem;
 }
 
-.board-header-set button{
+.board-header-set button {
   font-size: xx-small;
 }
 
-.handle{
+.handle {
   cursor: move;
 }
 
@@ -249,13 +251,13 @@ body {
   z-index: 9999;
 }
 
-.desc-jp-en{
+.desc-jp-en {
   display: flex;
   flex-direction: column;
   gap: 0.75rem;
 }
 
-.board-description button{
+.board-description button {
   font-size: small;
   width: fit-content;
   background: var(--accent);
@@ -266,11 +268,11 @@ body {
   cursor: pointer;
 }
 
-button:active{
+button:active {
   box-shadow: inset -0.15rem -0.15rem 0 0 rgba(255, 255, 255, 0.5), inset -0.075rem -0.075rem 0 0 rgba(255, 255, 255, 0.5), inset 0.15rem 0.15rem 0 0 rgba(0, 0, 0, 0.25), inset 0.075rem 0.075rem 0 0 rgba(0, 0, 0, 0.25);
 }
 
-#create-room{
+#create-room {
   font-size: small;
   position: absolute;
   bottom: 1rem;
@@ -395,7 +397,6 @@ button:active{
   font-size: normal;
   outline: none;
 }
-
 
 /*Generative Art*/
 .generativeart {
