--- a/styles/globals.css
+++ b/styles/globals.css
@@ -190,10 +190,12 @@ body {
   left: 50vw;
   left: 50dvw;
   transform: translate(-50%, -50%);
-  width: 300px;
-  height: 300px;
+  width: 100%;
+  height: 100%;
   min-width: 300px;
   min-height: 300px;
+  max-width: 300px;
+  max-height: 300px;
   background: var(--cream);
   overflow: hidden;
   border-radius: 1rem;
