--- a/styles/globals.css
+++ b/styles/globals.css
@@ -64,9 +64,6 @@ body {
   padding: 0;
   width: 100%;
   height: var(--header-height);
-  position: fixed;
-  top: 0;
-  left: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -167,7 +164,7 @@ body {
 }
 
 #manipulate {
-  position: fixed;
+  position: absolute;
   right: 1rem;
   bottom: 4rem;
   display: flex;
@@ -188,14 +185,23 @@ body {
   align-items: center;
   cursor: pointer;
 }
-
-.board {
-  position: absolute;
+.land-container {
+  position: relative;
+}
+#board_01 {
   top: 50vh;
   top: 50dvh;
   left: 50vw;
   left: 50dvw;
   transform: translate(-50%, -50%);
+}
+.board {
+  position: absolute;
+  /*top: 50vh;
+  top: 50dvh;
+  left: 50vw;
+  left: 50dvw;
+  transform: translate(-50%, -50%);*/
   min-width: 300px;
   min-height: 300px;
   width: 300px;
@@ -205,8 +211,11 @@ body {
   border-radius: 1rem;
   border: 2px solid var(--black);
   box-shadow: 0.5rem 0.5rem 0 0 var(--accent);
+  z-index: 1;
 }
-
+.chat {
+  z-index: 2;
+}
 .board-header {
   position: absolute;
   font-size: 0.75rem;
@@ -356,7 +365,7 @@ button:active {
   font-size: 0.75rem;
 }
 
-#follower {
+.follower {
   /* visibility: hidden; */
   width: fit-content;
   height: auto;
