--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -173,6 +173,20 @@ body {
   z-index: 10;
 }
 
+.mute-button {
+  width: 35px;
+  height: 35px;
+  background-color: var(--accent);
+  border: 2px solid var(--black);
+  color: var(--cream);
+  font-size: medium;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 2rem;
+  cursor: pointer;
+}
+
 #manipulate button {
   width: 35px;
   height: 35px;
