名称をSpaceに変更。コード内の名称も変更

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -199,11 +199,11 @@ body {
   align-items: center;
   cursor: pointer;
 }
-.land-container {
+.space-container {
   position: relative;
 }
 
-#create-new-land {
+#create-new-space {
   z-index: 1000;
 }
 .board {
