--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -400,9 +400,13 @@ button:active {
   opacity: 0.5;
 }
 
+.card-wrapper {
+}
 .card {
   width: fit-content;
   height: auto;
+  min-width: 1em;
+  min-height: 1em;
   max-width: 10.4em;
   word-break: break-all;
   padding: 0.5rem;
@@ -418,6 +422,33 @@ button:active {
   transition: all 0.2s linear;
   user-select: none;
 }
+
+/*bounceアニメ*/
+@keyframes jello {
+  0% {
+    transform: scale(1.1, 1.1) rotate(0deg);
+  }
+  20% {
+    transform: scale(0.9, 0.9) rotate(-2deg);
+  }
+  40% {
+    transform: scale(1.1, 1.1) rotate(2deg);
+  }
+  60% {
+    transform: scale(0.95, 0.95) rotate(-1deg);
+  }
+  80% {
+    transform: scale(1.05, 1.05) rotate(1deg);
+  }
+  100% {
+    transform: scale(1, 1) rotate(0deg);
+  }
+}
+
+.jello-animation {
+  animation: jello 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) infinite;
+}
+
 .draggable-card {
   cursor: pointer; /* ドラッグ可能なカードのカーソル */
 }
