--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -407,6 +407,7 @@ button:active {
   transition: transform 0.2s cubic-bezier(0.23, 1, 0.32, 1);
 }
 .card {
+  opacity: 0;
   width: fit-content;
   height: auto;
   min-width: 1em;
@@ -424,7 +425,6 @@ button:active {
   display: flex;
   flex-wrap: wrap;
   transition: all 0.2s cubic-bezier(0.23, 1, 0.32, 1);
-  animation: popIn 0.2s cubic-bezier(0.23, 1, 0.32, 1) forwards;
 }
 
 /*bounceアニメ*/
@@ -449,7 +449,22 @@ button:active {
   }
 }
 
+@keyframes popIn {
+  0% {
+    opacity: 0;
+    transform: scale(0.5, 0.5);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1, 1);
+  }
+}
+
+.popIn {
+  animation: popIn 0.2s cubic-bezier(0.23, 1, 0.32, 1) forwards;
+}
 .jello-animation {
+  opacity: 1;
   animation: jello 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) forwards;
 }
 
