--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -450,11 +450,12 @@ button:active {
 
 @keyframes popIn {
   0% {
-    opacity: 0;
     transform: scale(0.5, 0.5);
   }
+  70% {
+    transform: scale(1.2, 1.2);
+  }
   100% {
-    opacity: 1;
     transform: scale(1, 1);
   }
 }
