followerの仕様を変更

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -36,7 +36,7 @@ button {
 
 html,
 body {
-  font-family: "NuKinakoMochi", sans-serif;
+  font-family: "NuKinakoMochi", "Apple Color Emoji", sans-serif;
   margin: 0;
   padding: 0;
   overflow: hidden;
@@ -395,27 +395,6 @@ button:active {
   font-size: 0.75rem;
 }
 
-.follower {
-  /* visibility: hidden; */
-  width: fit-content;
-  height: auto;
-  min-width: 100px;
-  min-height: 50px;
-  max-width: 300px;
-  padding: 0.5rem 1rem;
-  background-color: var(--bg-primary);
-  color: var(--black);
-  display: flex;
-  justify-content: left;
-  align-items: center;
-  font-size: 1rem;
-  border-radius: 0.5rem;
-  box-shadow: 0 0 1rem 0.1rem rgba(0, 0, 0, 0.05);
-  position: absolute;
-  z-index: 999;
-  opacity: 0.5;
-}
-
 .card-wrapper {
   position: absolute;
   display: inline-block;
@@ -449,11 +428,30 @@ button:active {
   color: var(--black);
   font-size: 3rem;
   cursor: default; /* デフォルトのカーソル */
-  line-height: 0.8;
+  line-height: 1;
   padding-top: 16px;
   display: inline-block;
   flex-wrap: wrap;
 }
+.follower {
+  width: fit-content;
+  height: auto;
+  min-width: none;
+  min-height: none;
+  max-width: 10.4em;
+  word-break: break-all;
+  padding: 0;
+  font-family: "NuKinakoMochi", "Apple Color Emoji", sans-serif;
+  color: var(--black);
+  font-size: 3rem;
+  cursor: default; /* デフォルトのカーソル */
+  line-height: 0.8;
+  padding-top: 16px;
+  display: inline-block;
+  flex-wrap: wrap;
+  position: absolute;
+}
+
 .nocard:hover {
   transform: translateY(-2px);
 }
